--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "StatsViewer",
   "dependencies": {
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "react": "~0.14.6"
   }
 }
