--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "brunch": "^2.1.1",
     "clean-css-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
+    "history": "^1.17.0",
     "javascript-brunch": ">= 1.0 < 1.8",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
     "uglify-js-brunch": ">= 1.0 < 1.8"
   }
 }
